--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-uglify": "^3.0.0",
     "inputmask": "^4.0.0",
     "jquery.mmenu": "^7.0.2",
+    "select2": "^4.0.6-rc.1",
     "smart-grid": "^1.1.0"
   },
   "description": "forpost frontend",
