--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "inputmask": "^4.0.0",
     "jquery-nice-select": "^1.1.0",
     "jquery.mmenu": "^7.0.5",
+    "nouislider": "^11.1.0",
     "smart-grid": "^1.1.0"
   },
   "description": "forpost frontend",
